Add required dependencies

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
+lib_deps = 
+	paulstoffregen/Time@^1.6.1
+	mikalhart/TinyGPSPlus@^1.0.3
+	etherkit/Etherkit Si5351@^2.1.4
+	etherkit/Etherkit JTEncode@^1.3.1
