--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,13 @@ lib_deps =
 	mikalhart/TinyGPSPlus@^1.0.3
 	etherkit/Etherkit Si5351@^2.1.4
 	etherkit/Etherkit JTEncode@^1.3.1
+
+[env:bluepill_f103c8]
+platform = ststm32
+board = bluepill_f103c8
+framework = arduino
+lib_deps = 
+	paulstoffregen/Time@^1.6.1
+	mikalhart/TinyGPSPlus@^1.0.3
+	etherkit/Etherkit Si5351@^2.1.4
+	etherkit/Etherkit JTEncode@^1.3.1
