--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,5 @@ lib_deps =
 	mikalhart/TinyGPSPlus@^1.0.3
 	etherkit/Etherkit Si5351@^2.1.4
 	etherkit/Etherkit JTEncode@^1.3.1
+
+build_flags = -Wl,-Map,output.map
