--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,8 @@ framework = arduino
 lib_deps = 
 	paulstoffregen/Time@^1.6.1
 	mikalhart/TinyGPSPlus@^1.0.3
-	etherkit/Etherkit Si5351@^2.1.4
+	git@github.com:ChocolateFrogsNuts/Si5351Arduino.git#lite
 	etherkit/Etherkit JTEncode@^1.3.1
-
-build_flags = -Wl,-Map,output.map
+build_flags = 
+	-DSI5351_WITH_CLK67=0
+	-DWITH_CLK67=0
