--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328]
-platform = atmelavr
-board = nanoatmega328
-framework = arduino
+[common]
 lib_deps = 
 	paulstoffregen/Time@^1.6.1
 	mikalhart/TinyGPSPlus@^1.0.3
@@ -20,3 +17,12 @@ lib_deps =
 build_flags = 
 	-DSI5351_WITH_CLK67=0
 	-DWITH_CLK67=0
+
+[env:nanoatmega328]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+lib_deps = 
+  ${common.lib_deps}
+build_flags = 
+  ${common.build_flags}
