--- a/platformio.ini
+++ b/platformio.ini
@@ -24,5 +24,14 @@ board = bluepill_f103c8
 framework = arduino
 lib_deps = 
   ${common.lib_deps}
-build_flags = 
-  ${common.build_flags}
+build_flags =
+	${common.build_flags}
+    -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+    -D USBCON
+    -D USBD_VID=0x0483
+    -D USBD_PID=0x5740
+    -D USB_MANUFACTURER="Unknown"
+    -D USB_PRODUCT="\"BLUEPILL_F103C8\""
+    -D HAL_PCD_MODULE_ENABLED
+    -D PIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF
+    -D PIO_FRAMEWORK_ARDUINO_USB_HIGHSPEED_FULLMOD
