Support stm32 board (#4)
* Use hardware specific code changes to work on the STM32 bluepill board.
* Use STM32's watchdog driver, Voltage reference
* Commented out timer functions, as it has not yet been ported to the STM32.

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,11 +18,20 @@ build_flags =
 	-DSI5351_WITH_CLK67=0
 	-DWITH_CLK67=0
 
-[env:nanoatmega328]
-platform = atmelavr
-board = nanoatmega328
+[env:bluepill_f103c8]
+platform = ststm32
+board = bluepill_f103c8
 framework = arduino
 lib_deps = 
   ${common.lib_deps}
-build_flags = 
-  ${common.build_flags}
+build_flags =
+	${common.build_flags}
+    -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+    -D USBCON
+    -D USBD_VID=0x0483
+    -D USBD_PID=0x5740
+    -D USB_MANUFACTURER="Unknown"
+    -D USB_PRODUCT="\"BLUEPILL_F103C8\""
+    -D HAL_PCD_MODULE_ENABLED
+    -D PIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF
+    -D PIO_FRAMEWORK_ARDUINO_USB_HIGHSPEED_FULLMOD
